# auto-mm-pilot

./: .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  DEPLOY.md  Procfile  README.md  STACK_STATUS.md  agentic-coding-playbook.md  requirements.txt  start.sh
.claude/: settings.json
docs/: agentic-setup-checklist.md  architecture.md  conventions.md  decisions.md  llm-orchestration.md  product.md  sdk-quickstart.md  stack-status.md  user-journey.md  using-agents.md
operations/: crm.md  mvp-checklist.md  narrative.md
pitch/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
prototyping/: mvp.ipynb  mvp_archive.ipynb  mvp_new.ipynb  mvp_plan_gpt.md  mvp_plan_opus.md  pipeline.ipynb  requirements.txt  test_api.ipynb
sdk/: pyproject.toml
sdk/posit_sdk/: __init__.py  client.py  exceptions.py  models.py  rest.py  runtime.py  ws.py
sdk/tests/: test_connectors.py  test_describe.py  test_diagnose_zero_positions.py  test_events_stream.py  test_key_col_migration.py  test_market_value_warn.py  test_positions_replay.py  test_positions_rest.py  test_push_fanned.py  test_row_class.py  test_runtime.py  test_server_seq.py  test_unregistered.py  test_unregistered_notifications.py  test_upsert.py  test_validation.py  test_ws_state.py  test_zero_edge_blocked.py
server/: Procfile
tasks/: lessons.md  progress.md  spec-anatomy-4-space-dag.md  spec-block-canvas.md  spec-block-intent-inspector.md  spec-build-mode.md  spec-connectors.md  spec-domain-kb-feedback-loop.md  spec-domain-kb-per-user.md  spec-engine-command-execution.md  spec-llm-orchestration.md  (+11 more)
(+425 files in other folders)
