[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posit-sdk"
version = "0.1.0"
description = "Python SDK for the Posit trading platform"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["posit_sdk"]
